--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 [] remove the b() in typography
 [] fix formatting on some code
 [] prevent footer/bottomappbar from showing on top of keyboard (when keyboard is shown)
+[] add keyboardType to EBTextField and refactor the password logic
