--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 [] make a go-back button component
 [] remove the b() in typography
-[] fix formatting on some code
 [] prevent footer/bottomappbar from showing on top of keyboard (when keyboard is shown)
 [] add keyboardType to EBTextField and refactor the password logic
+[] add a showpassword 
+[] use the textfield type
+-------
+[X] fix formatting on some code
