--- a/TODO
+++ b/TODO
@@ -6,7 +6,6 @@ TODO:
     [] add keyboardType to EBTextField and refactor the password logic
     [] add a showpassword to register_resident
     [] add custom icons (home & menu bar)
-    [] labels are not bold
     [] check if linear is possible on splashscreen
     [] try to fix if there's a way to reduce padding
 -------
@@ -17,3 +16,4 @@ DONE:
     [X] remove the b() in typography
     [X] make a go-back button component
     [X] add a focus border color for textfields
+    [X] labels are not bold
