--- a/TODO
+++ b/TODO
@@ -5,7 +5,6 @@ TODO:
     [] prevent footer/bottomappbar from showing on top of keyboard (when keyboard is shown)
     [] add keyboardType to EBTextField and refactor the password logic
     [] add a showpassword to register_resident
-    [] add custom icons (home & menu bar)
     [] check if linear is possible on splashscreen
     [] try to fix if there's a way to reduce padding
 -------
@@ -17,3 +16,4 @@ DONE:
     [X] make a go-back button component
     [X] add a focus border color for textfields
     [X] labels are not bold
+    [X] add custom icons (home & menu bar)
