--- a/TODO
+++ b/TODO
@@ -1,14 +1,16 @@
 PRIORITY:
-    [] use the textfield type
+    [] fix the notch covering body
 -------
 TODO:
     [] prevent footer/bottomappbar from showing on top of keyboard (when keyboard is shown)
-    [] add keyboardType to EBTextField and refactor the password logic
-    [] add a showpassword to register_resident
-    [] use semantics i.e. (Form)
-    [] fix _ convention on constructors
 -------
 DONE:
+    [X] fix the overflow on sphere's card
+    [X] fix _ convention on constructors
+    [X] use semantics i.e. (Form)
+    [X] add a showpassword to register_resident
+    [X] add keyboardType to EBTextField and refactor the password logic
+    [X] use the textfield type
     [X] add documentation to 4 screens
     [X] fix formatting on some code
     [X] add a bold leading text to register_resident
