Redesigned registration for residents; better UX

--- a/TODO
+++ b/TODO
@@ -1,11 +1,11 @@
 PRIORITY:
     [] explore media query
-    [] be able to make the notification bar background adaptive to the colors of the app
 -------
 TODO:
     [] add loading elements 
 -------
 DONE:
+    [X] be able to make the notification bar background adaptive to the colors of the app
     [X] fix fonts from transitioning on default to custom font
     [X] explore and test button properties
     [X] add cards to a listview
