--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ TODO:
     [] Login Page (ListView)
     [] Registration heading
     [] Create Announcement [ListView.Builder]
+    [] BottomNavBar
 
 -------
 DONE:
