Implemented backend for joining barangay + ui bug fixes

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 PRIORITY:
 
+    [] fix the appbar_top config
+
 ---
 
 TODO:
@@ -10,6 +12,7 @@ TODO:
 ---
 
 DONE:
+
     [x] Create Announcement [ListView.Builder]
     [x] finish register on official
     [x] finish register on resident
