--- a/TODO
+++ b/TODO
@@ -12,6 +12,7 @@ TODO:
 
 DONE:
 
+    [X] change the address textfield in register to isDense and maxLines => add this to the form.dart
     [X] implement network catch screen
     [X] fix the appbar_top config
     [x] Create Announcement [ListView.Builder]
