Bug fixes on auth models and controller

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 PRIORITY:
 
+    [] weird sidebar bug is reloading the website (probable solution is because it's calling a setState that reloads all the app, try to use a stateful builder)
     [] fix the spam issue in clicking the bottom appbar from stacking on the stack
 
 ---
