--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@ PRIORITY:
 
     [] weird sidebar bug is reloading the website (probable solution is because it's calling a setState that reloads all the app, try to use a stateful builder)
     [] fix the spam issue in clicking the bottom appbar from stacking on the stack
+    [] email address should be changed on prop. username, email, and firebase_auth.email
+    [] catch errors on update email
 
 ---
 
