--- a/TODO
+++ b/TODO
@@ -15,6 +15,7 @@ TODO:
 
 DONE:
 
+    [X] use class for modal bottom sheet in info.dart
     [X] change the address textfield in register to isDense and maxLines => add this to the form.dart
     [X] implement network catch screen
     [X] fix the appbar_top config
