--- a/TODO
+++ b/TODO
@@ -1,7 +1,5 @@
 PRIORITY:
 
-    [] weird sidebar bug is reloading the website (probable solution is because it's calling a setState that reloads all the app, try to use a stateful builder) (probable solution is due to push() to stack try pushReplacement instead)
-
 ---
 
 TODO:
@@ -12,6 +10,7 @@ TODO:
 
 DONE:
 
+    [X] weird sidebar bug is reloading the website (probable solution is because it's calling a setState that reloads all the app, try to use a stateful builder) (probable solution is due to push() to stack try pushReplacement instead)
     [X] email address should be changed on prop. username, email, and firebase_auth.email
     [X] fix the spam issue in clicking the bottom appbar from stacking on the stack
     [X] use class for modal bottom sheet in info.dart
